# DAO_Tools

./: DAOLEDGER_BACKUP_MANIFEST.txt  app.py  requirements.txt  setup.py
.github/workflows/: deploy.yml
DaoLedger/: Dockerfile  app.py  debug_run_processor.py  pyproject.toml  readme.md  replit.md
DaoLedger/.github/workflows/: deploy.yml
DaoLedger/DaoLedger/dao_ledger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
DaoLedger/attached_assets/: osmo_secret_daily_prices.json  research and development - all passed proposals_1755980973963.json
DaoLedger/utils/: api_client.py  data_processor.py  report_generator.py
attached_assets/: combined_daily_prices_1756000184191.json  osmo_secret_daily_prices.json  research and development - all passed proposals_1755980973963.json
pagedata/: combine_daily_prices.py  combined_daily_prices.json  fetchtwap.py  osmo_secret_daily_prices.csv  page_osmo_2024.csv  page_osmo_daily_prices.csv  page_osmo_to_daily.py  page_osmo_transactions.json
utils/: api_client.py  data_processor.py  report_generator.py
